# fastapi_sample

./: Makefile  README.md  pyproject.toml
src/: main.py
src/routes/: post.py
